# dex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TASKS.md  cliff.toml  install.sh  mkdocs.yml  pyproject.toml
.claude/agents/: common-sense-reviewer.md  devils-advocate-reviewer.md  new-user-explorer.md  software-architect.md
.claude/commands/: agent-new.md  architect.md  build.md  code-reviewer.md  code-writer.md  common-sense.md  devils-advocate.md  lint.md  new-user.md  release.md  scaffold.md  test.md
.github/workflows/: ci.yml  docs.yml  release.yml  version.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/ARCHITECTURE/: index.html
0.1/SPEC/: index.html
0.1/contributing/: index.html
0.1/extending/: index.html
0.1/installation/: index.html
0.1/internal/prd-ai-integration/: index.html
0.1/internal/prd-templates/: index.html
0.1/internal/prd-templating-strategy/: index.html
0.1/quickstart/: index.html
0.1/releasing/: index.html
0.1/usage/: index.html
0.1/usage/agent/: index.html
0.1/usage/init/: index.html
0.1/usage/mcp/: index.html
0.1/usage/templates/: index.html
crates/dex-core/: Cargo.toml
crates/dex-core/src/: config.rs  error.rs  lib.rs  scaffold.rs
crates/dex-core/src/agent/: mod.rs  spec.rs
crates/dex-core/src/template/: dabs_schema.rs  engine.rs  manifest.rs  mod.rs  registry.rs  variables.rs
crates/dex-py/: Cargo.toml
crates/dex-py/src/: lib.rs
docs/: ARCHITECTURE.md  SPEC.md  contributing.md  extending.md  index.md  installation.md  prd-templating-strategy.md  quickstart.md  releasing.md
docs/internal/: prd-ai-integration.md  prd-templates.md
docs/templates/: authoring.md  built-in.md  org-templates.md
docs/usage/: agent.md  index.md  init.md  mcp.md  templates.md
latest/: 404.html  index.html  sitemap.xml
latest/ARCHITECTURE/: index.html
latest/SPEC/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/extending/: index.html
latest/installation/: index.html
latest/internal/prd-ai-integration/: index.html
latest/internal/prd-templates/: index.html
latest/internal/prd-templating-strategy/: index.html
latest/prd-ai-integration/: index.html
latest/prd-templates/: index.html
latest/prd-templating-strategy/: index.html
latest/quickstart/: index.html
latest/releasing/: index.html
latest/search/: search_index.json
latest/usage/: index.html
latest/usage/agent/: index.html
latest/usage/init/: index.html
latest/usage/mcp/: index.html
latest/usage/templates/: index.html
python/dex/: __init__.py  _core.pyi  agent.py  cli.py  config.py  ext.py  mcp_server.py  passthrough.py
scripts/: bump-version.py
templates/dabs-aiagent/: template.toml
templates/dabs-aiagent/files/: README.md.j2  databricks.yml.j2  pyproject.toml.j2
templates/dabs-aiagent/files/notebooks/: deploy_agent.py.j2  evaluate_agent.py  evaluate_agent.py.j2
templates/dabs-aiagent/files/resources/: {{ project_name }}_deploy_job.yml.j2  {{ project_name }}_serving.yml.j2
templates/dabs-aiagent/files/src/{{ project_name }}/: agent.py.j2
templates/dabs-aiagent/files/src/{{ project_name }}/tools/: __init__.py  __init__.py.j2  retriever.py.j2
templates/dabs-aiagent/files/tests/: test_{{ project_name }}.py.j2
templates/dabs-etl/: template.toml
templates/dabs-etl/files/: .gitignore  README.md.j2  databricks.yml.j2  pyproject.toml.j2
templates/dabs-etl/files/notebooks/: exploration.py
templates/dabs-etl/files/resources/: {{ project_name }}_pipeline.yml.j2
templates/dabs-etl/files/src/{{ project_name }}/: pipeline.py.j2
templates/dabs-etl/files/tests/: test_{{ project_name }}.py.j2
templates/dabs-ml/: template.toml
templates/dabs-ml/files/: .gitignore  README.md.j2  databricks.yml.j2  pyproject.toml.j2
templates/dabs-ml/files/notebooks/: exploration.py
templates/dabs-ml/files/resources/: {{ project_name }}_training_job.yml.j2
templates/dabs-ml/files/serving/: {{ project_name }}_serving.yml.j2
templates/dabs-ml/files/src/{{ project_name }}/: train.py.j2
templates/dabs-ml/files/tests/: test_{{ project_name }}.py.j2
templates/dabs-package/: template.toml
templates/dabs-package/files/: README.md.j2  databricks.yml.j2  pyproject.toml.j2
templates/dabs-package/files/notebooks/: exploration.py
templates/dabs-package/files/resources/: {{ project_name }}_job.yml.j2
templates/dabs-package/files/src/{{ project_name }}/: main.py.j2
templates/dabs-package/files/tests/: test_{{ project_name }}.py.j2
templates/default/: template.toml
templates/default/files/: .gitignore  README.md.j2  databricks.yml.j2  pyproject.toml.j2
templates/default/files/notebooks/: exploration.py
templates/default/files/src/project_name/: main.py.j2
templates/default/files/tests/: test_main.py.j2
tests/: test_agent_new.py  test_cli.py  test_config.py  test_mcp_serve.py  test_passthrough.py
