[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dex"
version = "0.1.0"
description = "Extensible CLI framework for data project operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "yarrib" }]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8",
    "pytest-cov>=5",
    "bandit>=1.8",
    "ty>=0.0.1",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mike>=2.0",
]

[project.scripts]
dex = "dex.cli:cli"

[tool.maturin]
bindings = "pyo3"
manifest-path = "crates/dex-py/Cargo.toml"
module-name = "dex._core"
python-source = "python"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dex --cov-report=term-missing --cov-fail-under=80"
