[package]
name = "dex-core"
version = "0.0.2"
description = "Core library for dex — template engine, config, scaffolding"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
include_dir = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
