[package]
name = "dex-py"
version = "0.0.2"
description = "Python bindings for dex-core via PyO3"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
dex-core = { workspace = true }
minijinja = { workspace = true }
pyo3 = { workspace = true }
